2011-12-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* dbus/networkstate.py, dbus/idelechck.py: Migrated to GDBus
	  (issue #103).
	* preferences/*, preferences.ui: Code refactoring.

2011-12-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/authdialog.py: Added a loading spinner.

2011-12-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b3 release.
	* urlgetautoproxy.py: Improved error handling.
	* html.py: Added size attributes on icon image tags.
	* history/*, tooltip.py, liststore.py: Fixed many unicode enciding
	  problems.

2011-12-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b2 release.
	* plugins/picasa.py: Picasa feeds have not included exif data.

2011-12-20  Yoshizumi Endo  <yendo@ubuntu>

	* config.py: Removed an obsolete module.
	* settings.py: Ported from GConf to GSettings.

2011-12-16  Yoshizumi Endo  <yendo@ubuntu>

	* gphotoframe.schemas.in: Changed default_weight from 3 to 5.
	* liststore.py: Save the liststore as JSON.

2011-12-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Code refactoring.

2011-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b1 release.
	* image/animation.py: Fixed a import error.
	* image/animation.py: Fixed import errors.

2011-12-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/history/history.html: Added the icon to the history.html.
	* image/gtkimage.py, plugins/base/base.py: Fixed size attribute
	  problems.
	* tumblr/__init__.py: Added size attributes.

2011-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added new gconf key 'ui/map/source_uri'.

2011-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added support for Map on image with
	  libchamplain.

2011-11-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4.1 release.

2011-11-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/config.py: Use old gconf package. New one has bugs.